samples/_failures_safe/1761702834_a67b8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_128d7aa0.c: In function ‘main’:
./samples/SAFE/__tmp_128d7aa0.c:142:24: error: missing terminating " character
  142 |                 printf("Enter
      |                        ^~~~~~
./samples/SAFE/__tmp_128d7aa0.c:142:17: error: expected expression at end of input
  142 |                 printf("Enter
      |                 ^~~~~~
./samples/SAFE/__tmp_128d7aa0.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_128d7aa0.c:142:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_128d7aa0.c:142:17: error: expected declaration or statement at end of input
